--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -652,6 +652,7 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
 
 .header-navigation .navigation-box .header-logo {
   margin: 10px  0;
+  max-width: 30%;
   display: block;
 }
 
