--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,29 +5,15 @@
             <div class="row">
                 <div class="col-md-6 col-lg-4">
                     <div class="footer-widget wow fadeIn" data-wow-duration="1s">
-                        <h5 class="footer-title heading-5">About Doxy</h5>
-                        <p>Doxy is a minimal support and document based website template. It has all the modern features for the digital product authors who wants to make their product's documentation website.</p>
+                        <h5 class="footer-title heading-5">About Us</h5>
+                        <p>The IISc ACM Student Chapter is a joint initiative by the research students from Department of Computational and Data Sciences (CDS) and Computer Science and Automation (CSA). The chapter aims to further communication channels with alumni from academia and industry, highlight and recognize research with-in the institute and collectively bridge gap between research and practice. </p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-2">
                     <div class="footer-widget wow fadeIn" data-wow-duration="2s">
                         <h5 class="footer-title heading-5">Pages</h5>
                         <ul class="footer-category list-inline">
-                            <li><a href="/pages/testimonials">Testimonials</a></li>
-                            <li><a href="/pages/privacy-policy">Privacy Policy</a></li>
-                            <li><a href="/pages/support">Support Topic </a></li>
-                            <li><a href="/tag/education">Education</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <div class="footer-widget wow fadeIn" data-wow-duration="3s">
-                        <h5 class="footer-title heading-5">Get Help</h5>
-                        <ul class="footer-category list-inline">
-                            <li><a href="/pages/support">Support</a></li>
-                            <li><a href="/pages/submit-ticket">Supmit Ticket</a></li>
-                            <li><a href="/pages/register">Register</a></li>
-                            <li><a href="/pages/login">Login</a></li>
+                            <li><a href="/pages/about-us">About Us</a></li>                            
                         </ul>
                     </div>
                 </div>
@@ -35,14 +21,8 @@
                     <div class="footer-widget wow fadeIn" data-wow-duration="4s">
                         <h5 class="footer-title heading-5">Follow Us</h5>
                         <ul class="footer-socials list-inline">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-behance"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-instagram"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-reddit"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-vimeo"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-github"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -56,6 +36,6 @@
             </div>
         </div>
     </div>
-    <a href="#" class="home-top"><i class="fa fa-angle-down" aria-hidden="true"></i></a>
+    <a href="#" class="home-top"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
 </footer>
 <!-- End Footer Area -->
