--- a/_includes/header_bottom_area.html
+++ b/_includes/header_bottom_area.html
@@ -6,12 +6,10 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="headline-box wow fadeInUp" data-wow-duration="1s" style="visibility:visible; animation-duration:1s; animation-name:fadeInUp;">
                         <div class="headline-logo">
-                            <a href="/pages/explore-topics/"><img src="{{site.baseurl}}/assets/images/service-icon2.png" alt="Knowledge Base"></a>
+                            <a href="/pages/about-us/"><img src="{{site.baseurl}}/assets/images/service-icon2.png" alt="About Us"></a>
                         </div>
                         <div class="headline-content">
-                            <h4 class="heading-4"><a href="/pages/explore-topics/">Knowledge Base </a></h4>
-                            <p> psum is simply dummy text of the pritypesetting industry Lorem Ipsum has been the industry's standard </p>
-                            <a href="/pages/explore-topics/" class="btn btn-style3">Learn More</a>
+                            <h4 class="heading-4"><a href="/pages/about-us/">About Us </a></h4>
                         </div>
                     </div>
                 </div>
@@ -21,9 +19,8 @@
                             <a href="/pages/faq/"><img src="{{site.baseurl}}/assets/images/service-icon.png" alt="Question Answer"></a>
                         </div>
                         <div class="headline-content">
-                            <h4 class="heading-4"><a href="/pages/faq/">Question Answer </a></h4>
-                            <p> psum is simply dummy text of the pritypesetting industry Lorem Ipsum has been the industry's standard </p>
-                            <a href="/pages/faq/" class="btn btn-style3">Read FAQ</a>
+                            <h4 class="heading-4"><a href="/pages/faq/">Inaugural Event </a></h4>
+                            <p>The Chapter will hold it's inaugral event on the 12th of June 2019. The event will feature Dr. Gargi Banerjee Dasgupta (Director, IBM Research India and CTO, IBM India and South Asia) as the Chief Guest. </p>
                         </div>
                     </div>
                 </div>
@@ -33,9 +30,8 @@
                             <a href="/docs/left-sidebar-example"><img src="{{site.baseurl}}/assets/images/service-icon3.png" alt="Documentation"></a>
                         </div>
                         <div class="headline-content">
-                            <h4 class="heading-4"><a href="/docs/left-sidebar-example">Documentation</a></h4>
-                            <p> psum is simply dummy text of the pritypesetting industry Lorem Ipsum has been the industry's standard </p>
-                            <a href="/docs/left-sidebar-example" class="btn btn-style3">Read Docs</a>
+                            <h4 class="heading-4"><a href="/docs/left-sidebar-example">Open Positions</a></h4>
+                            <p>The Chapter is still in it's infancy and we need your help to ensure it's smooth operation. Apply now for the open positions. </p>
                         </div>
                     </div>
                 </div>
