--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
     <!-- Site Title -->
     <title>{% if page.title %} {{page.title}} {% else %} {{site.title}} {% endif %}</title>
     <!--  Add Favicon -->
-    <link rel="shortcut icon" href="{{site.baseurl}}/assets/images/favicon.png" type="image/x-icon"/>
-    <link rel="icon" href="{{site.baseurl}}/assets/images/favicon.png" type="image/x-icon"/>
+    <!-- <link rel="shortcut icon" href="{{site.baseurl}}/assets/images/favicon.png" type="image/x-icon"/> -->
+    <!-- <link rel="icon" href="{{site.baseurl}}/assets/images/favicon.png" type="image/x-icon"/> -->
     <!-- Add CSS File -->
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/font-awesome.min.css"/>
