--- a/_includes/header_bottom_area.html
+++ b/_includes/header_bottom_area.html
@@ -16,10 +16,10 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="headline-box wow fadeInUp" data-wow-duration="2s" style="visibility: visible; animation-duration: 2s; animation-name: fadeInUp;">
                         <div class="headline-logo">
-                            <a href="/pages/faq/"><img src="{{site.baseurl}}/assets/images/service-icon.png" alt="Question Answer"></a>
+                            <a href="/inaugural-event"><img src="{{site.baseurl}}/assets/images/service-icon.png" alt="Inaugural Event"></a>
                         </div>
                         <div class="headline-content">
-                            <h4 class="heading-4"><a href="/pages/faq/">Inaugural Event </a></h4>
+                            <h4 class="heading-4"><a href="/inaugural-event">Inaugural Event </a></h4>
                             <p>The Chapter will hold it's inaugral event on the 12th of June 2019. The event will feature Dr. Gargi Banerjee Dasgupta (Director, IBM Research India and CTO, IBM India and South Asia) as the Chief Guest. </p>
                         </div>
                     </div>
