--- a/_includes/post_loop.html
+++ b/_includes/post_loop.html
@@ -24,17 +24,17 @@
     </div>
    </div>
    <div class="single-admin">
-      
+
+      {% if page.author_image %}
       <div class="admin-avatar">
          <img src="{% if page.author_image %} {{page.author_image}} {% else %} {{site.baseurl}}/assets/images/avatar.jpg {% endif %}" alt="{{page.author}}"/>
       </div>
+      {% endif %}
       
       <div class="admin-comment">
          {% if page.author_bio %}
          <p>{{page.author_bio}}</p>
          {% endif %}
-         <h4 class="heading-4">Annonymous</h4>
-         <h6 class="heading-6">n/a</h6>
       </div>
    </div>
    {% include pagination.html %}
