--- a/_includes/social_share.html
+++ b/_includes/social_share.html
@@ -15,17 +15,10 @@
         </a>
     </li>
     <li class="list-inline-item">
-      <a  href="https://plus.google.com/share?url={{ site.url }}{{ site.baseurl }}{{ page.url }}"
-            onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
-            title="Share on Google+" >
-            <i class="fa fa-google-plus"></i>
-        </a>
-    </li>
-    <li class="list-inline-item">
-        <a  href="http://www.tumblr.com/share/link?url={{ site.url }}{{ site.baseurl }}{{ page.url }}"
+        <a  href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ site.baseurl }}{{ page.url }}"
             onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=900,height=500,toolbar=1,resizable=0'); return false;"
-            title="Share on Tumblr" >
-            <i class="fa fa-tumblr share-button"></i>
+            title="Share on LinkedIn" >
+            <i class="fa fa-linkedin share-button"></i>
         </a>
     </li>
 </ul>
