--- a/_includes/header_bottom_area.html
+++ b/_includes/header_bottom_area.html
@@ -10,6 +10,8 @@
                         </div>
                         <div class="headline-content">
                             <h4 class="heading-4"><a href="/pages/about-us/">About Us </a></h4>
+                            <p><a href="/pages/about-us/">The IISc ACM Student Chapter is a joint initiative by the research students from Department of Computational and Data Sciences (CDS) and Computer Science and Automation (CSA). </a></p>
+                            <a href="/pages/about-us/" class="btn btn-style3">More</a>
                         </div>
                     </div>
                 </div>
@@ -20,18 +22,20 @@
                         </div>
                         <div class="headline-content">
                             <h4 class="heading-4"><a href="/inaugural-event">Inaugural Event </a></h4>
-                            <p>The Chapter will hold it's inaugral event on the 12th of June 2019. The event will feature Dr. Gargi Banerjee Dasgupta (Director, IBM Research India and CTO, IBM India and South Asia) as the Chief Guest. </p>
+                            <p><a href="/inaugural-event">The Chapter will hold it's inaugral event on the 12th of June 2019. The event will feature Dr. Gargi Banerjee Dasgupta (Director, IBM Research India and CTO, IBM India and South Asia) as the Chief Guest. </a></p>
+                            <a href="/inaugural-event" class="btn btn-style3">More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="headline-box m-0 wow fadeInUp" data-wow-duration="3s" style="visibility: visible; animation-duration: 3s; animation-name: fadeInUp;">
                         <div class="headline-logo">
-                            <a href="/docs/left-sidebar-example"><img src="{{site.baseurl}}/assets/images/service-icon3.png" alt="Documentation"></a>
+                            <a href="/pages/open-positions/"><img src="{{site.baseurl}}/assets/images/service-icon3.png" alt="Open Positions"></a>
                         </div>
                         <div class="headline-content">
-                            <h4 class="heading-4"><a href="/docs/left-sidebar-example">Open Positions</a></h4>
-                            <p>The Chapter is still in it's infancy and we need your help to ensure it's smooth operation. Apply now for the open positions. </p>
+                            <h4 class="heading-4"><a href="/pages/open-positions/">Open Positions</a></h4>
+                            <p><a href="/docs/left-sidebar-example">The Chapter is still in it's infancy and we need your help to ensure it's smooth operation. Apply now for the open positions. </a></p>
+                            <a href="/pages/open-positions/" class="btn btn-style3">More</a>
                         </div>
                     </div>
                 </div>
