Added Form for Open Positions

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,21 +3,23 @@
     <div class="footer-wrapper section-spacing bminus-30">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-8 col-lg-8">
                     <div class="footer-widget wow fadeIn" data-wow-duration="1s">
                         <h5 class="footer-title heading-5">About Us</h5>
                         <p>The IISc ACM Student Chapter is a joint initiative by the research students from Department of Computational and Data Sciences (CDS) and Computer Science and Automation (CSA). The chapter aims to further communication channels with alumni from academia and industry, highlight and recognize research with-in the institute and collectively bridge gap between research and practice. </p>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-2">
+                <div class="col-md-2 col-lg-2">
                     <div class="footer-widget wow fadeIn" data-wow-duration="2s">
                         <h5 class="footer-title heading-5">Pages</h5>
                         <ul class="footer-category list-inline">
-                            <li><a href="/pages/about-us">About Us</a></li>                            
+                            <li><a href="/pages/about-us">About Us</a></li>
+                            <li><a href="/pages/open-positions">Open Positions</a></li> 
+                            <li><a href="/pages/contact">Contact Us</a></li>                             
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-3">
+                <div class="col-md-2 col-lg-2">
                     <div class="footer-widget wow fadeIn" data-wow-duration="4s">
                         <h5 class="footer-title heading-5">Follow Us</h5>
                         <ul class="footer-socials list-inline">
