--- a/_includes/timeline_area.html
+++ b/_includes/timeline_area.html
@@ -1,6 +1,6 @@
 <!-- Start Timeline Area -->
 <div class="timeline-area bg-color1">
-    <div class="timeline-wrapper section-spacing ">
+    <div class="timeline-wrapper timeline-section-spacing ">
         <div class="container">
             <div class="section-title">
                 <h2 class="heading-2">Roadmap</h2>
