Refinements to Home page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                 <div class="col-md-8 col-lg-8">
                     <div class="footer-widget wow fadeIn" data-wow-duration="1s">
                         <h5 class="footer-title heading-5">About Us</h5>
-                        <p>The IISc ACM Student Chapter is a joint initiative by the research students from Department of Computational and Data Sciences (CDS) and Computer Science and Automation (CSA). The chapter aims to further communication channels with alumni from academia and industry, highlight and recognize research with-in the institute and collectively bridge gap between research and practice. </p>
+                        <p>The IISc ACM Student Chapter is a joint initiative by the research students from Department of Computational and Data Sciences (CDS) and Computer Science and Automation (CSA). The chapter aims to further communication channels with alumni from academia and industry, highlight and recognize research within the institute and collectively bridge gap between research and practice. </p>
                     </div>
                 </div>
                 <div class="col-md-2 col-lg-2">
