--- a/_includes/header_bottom_area.html
+++ b/_includes/header_bottom_area.html
@@ -7,6 +7,7 @@
                     <div class="headline-box wow fadeInUp" data-wow-duration="1s" style="visibility:visible; animation-duration:1s; animation-name:fadeInUp;">
                         <div class="headline-logo">
                             <a href="/pages/about-us/"><img src="{{site.baseurl}}/assets/images/service-icon2.png" alt="About Us"></a>
+                            <!-- <a href="/pages/about-us/"><img src="{{site.baseurl}}/assets/images/service-icon2.png" alt="About Us"></a> -->
                         </div>
                         <div class="headline-content">
                             <h4 class="heading-4"><a href="/pages/about-us/">About Us </a></h4>
@@ -18,7 +19,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="headline-box wow fadeInUp" data-wow-duration="2s" style="visibility: visible; animation-duration: 2s; animation-name: fadeInUp;">
                         <div class="headline-logo">
-                            <a href="/inaugural-event"><img src="{{site.baseurl}}/assets/images/service-icon.png" alt="Inaugural Event"></a>
+                            <a href="/inaugural-event"><img src="{{site.baseurl}}/assets/images/popular-2.png" alt="Inaugural Event"></a>
                         </div>
                         <div class="headline-content">
                             <h4 class="heading-4"><a href="/inaugural-event">Inaugural Event </a></h4>
