--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
    <!-- End Page Title Area -->
    <!-- Start Blog  Area -->
    <section class="blog-area bg-color1">
-      <div class="blog-wrapper section-spacing bminus-30">
+      <div class="blog-wrapper bminus-30">
          <div class="container">
             <div class="row">
                <div class="col-md-12 col-lg-12">
