Fix content and typos

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,7 @@
                         <h5 class="footer-title heading-5">Pages</h5>
                         <ul class="footer-category list-inline">
                             <li><a href="/pages/about-us">About Us</a></li>
+                            <li><a href="/pages/join-us">Join Us</a></li>
                             <li><a href="/pages/open-positions">Open Positions</a></li> 
                             <li><a href="/pages/contact">Contact Us</a></li>                             
                         </ul>
