--- a/_includes/header_bottom_area.html
+++ b/_includes/header_bottom_area.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="headline-content">
                             <h4 class="heading-4"><a href="/inaugural-event">Inaugural Event </a></h4>
-                            <p><a href="/inaugural-event">The Chapter will hold it's inaugral event on the 13th of June 2019. The event will feature Dr. Gargi Banerjee Dasgupta (Director, IBM Research India and CTO, IBM India and South Asia) as the Chief Guest. </a></p>
+                            <p><a href="/inaugural-event">The Chapter will hold it's inaugural event on the 13th of June 2019. The event will feature Dr. Gargi Banerjee Dasgupta (Director, IBM Research India and CTO, IBM India and South Asia) as the Chief Guest. </a></p>
                             <a href="/inaugural-event" class="btn btn-style3">More</a>
                         </div>
                     </div>
