--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name='description' content='{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}'>
     <meta name="keywords" content="{% if page.keywords %}{{ page.keywords}}{% else %}{{ site.keywords }}{% endif %}">
-	<!-- Facebook Open Graph -->	
+    <meta name="google-site-verification" content="GW5_PNjWArO5lxcjagIsOVZ2tKBoKK2kbPfs4YN-4-o" />
+    <!-- Facebook Open Graph -->	
 	<meta content="{{ site.title }}" property="og:site_name">
 	<meta property="og:locale" content="en_US" />
 	{% if page.title %}<meta content="{{ page.title }}" property="og:title">{% else %}<meta content="{{ site.title }}" property="og:title">{% endif %}
