--- a/_includes/header_bottom_area.html
+++ b/_includes/header_bottom_area.html
@@ -19,12 +19,12 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="headline-box wow fadeInUp" data-wow-duration="2s" style="visibility: visible; animation-duration: 2s; animation-name: fadeInUp;">
                         <div class="headline-logo">
-                            <a href="/inaugural-event"><img src="{{site.baseurl}}/assets/images/popular-2.png" alt="Inaugural Event"></a>
+                            <a href="/invitedtalk-manishgupta"><img src="{{site.baseurl}}/assets/images/popular-2.png" alt="Invited Talk"></a>
                         </div>
                         <div class="headline-content">
-                            <h4 class="heading-4"><a href="/inaugural-event">Inaugural Event </a></h4>
-                            <p><a href="/inaugural-event">The Chapter will hold it's inaugural event on the 13th of June 2019. The event will feature Dr. Gargi Banerjee Dasgupta (Director, IBM Research India and CTO, IBM India and South Asia) as the Chief Guest. </a></p>
-                            <a href="/inaugural-event" class="btn btn-style3">More</a>
+                            <h4 class="heading-4"><a href="/invitedtalk-manishgupta">Invited Talk</a></h4>
+                            <p><a href="/invitedtalk-manishgupta"> The Chapter will host an invited talk by <b>Dr. Manish Gupta</b>, Head, Google Research India on <b>23rd October 2019</b>. </a></p>
+                            <a href="/invitedtalk-manishgupta" class="btn btn-style3">More</a>
                         </div>
                     </div>
                 </div>
