--- a/_includes/timeline_area.html
+++ b/_includes/timeline_area.html
@@ -7,29 +7,22 @@
             </div>
 
             <div class="timeline">
-                <ul>
-                        <li>
-                            <div class="timeline-content">
-                                <h4 class="heading-4">Programming Workshop</h4>
-                                <p class="timeline-time">01-09-2019</p>
-                            </div>
-                        </li>
-                        
-                        <li>
-                            <div class="timeline-content">
-                                <h4 class="heading-4">Chapter Newsletter</h4>
-                                <p class="timeline-time">01-08-2019</p>
+                <ul>                        
+                        <li class="upcoming-event">
+                            <div class="timeline-content upcoming-event">
+                                <h4 class="heading-4">Invited Talk - Dr. Manish Gupta</h4>
+                                <p class="timeline-time">23-10-2019</p>
                                 <!-- <p class="timeline-desc">Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus </p> -->
                             </div>
                         </li>
-                        <li>
-                            <div class="timeline-content">
+                        <li class="completed-event">
+                            <div class="timeline-content completed-event">
                                 <h4 class="heading-4">Inaugural Event</h4>
                                 <p class="timeline-time">13-06-2019</p>
                             </div>
                         </li>
-                        <li>
-                            <div class="timeline-content">
+                        <li class="completed-event">
+                            <div class="timeline-content completed-event">
                                 <h4 class="heading-4">Chapter Started</h4>
                                 <p class="timeline-time">26-03-2019</p>
                             </div>
