--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1089,6 +1089,7 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
 }
 
 .page-title {
+  padding-top: 30px;
   position: relative;
   z-index: 22;
 }
@@ -2710,6 +2711,38 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
   background: #f2f6fb;
 }
 
+.timeline ul li .completed-event{
+  background: #96d196;
+}
+
+.timeline .completed-event{
+  background: #96d196;
+}
+
+.timeline ul li .upcoming-event{
+  background: #f2f6fb;
+}
+
+.timeline .upcoming-event{
+  background: #f2f6fb;
+}
+
+.timeline ul li:nth-child(odd) .completed-event::before {
+  border-color: transparent transparent transparent #96d196;
+}
+
+.timeline ul li:nth-child(even) .completed-event::before {
+  border-color: transparent #96d196 transparent transparent;
+}
+
+.timeline ul li:nth-child(odd) .upcoming-event::before {
+  border-color: transparent transparent transparent #f2f6fb;
+}
+
+.timeline ul li:nth-child(even) .upcoming-event::before {
+  border-color: transparent #f2f6fb transparent transparent;
+}
+
 .timeline ul li .timeline-content::before {
   content: '';
   position: absolute;
@@ -2730,7 +2763,6 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
 .timeline ul li:nth-child(even) .timeline-content::before {
   left: -15px;
   border-width: 15px 16px 15px 0;
-  border-color: transparent #f2f6fb transparent transparent;
 }
 
 .timeline ul li:nth-child(odd) .timeline-content {
@@ -2740,7 +2772,6 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
 .timeline ul li:nth-child(odd) .timeline-content::before {
   right: -15px;
   border-width: 15px 0 15px 16px;
-  border-color: transparent transparent transparent #f2f6fb;
 }
 
 .timeline ul h4 {
@@ -2753,10 +2784,6 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
 
 .timeline ul li::after {
   transition: background .5s ease-in-out;
-}
-
-.timeline ul li.in-view::after {
-  background: #f2f6fb;
 }
 
 .timeline ul li .timeline-content {
