--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,8 +14,9 @@
                         <h5 class="footer-title heading-5">Pages</h5>
                         <ul class="footer-category list-inline">
                             <li><a href="/pages/about-us">About Us</a></li>
-                            <li><a href="/pages/join-us">Join Us</a></li>
-                            <li><a href="/pages/open-positions">Open Positions</a></li> 
+                            <li><a href="/pages/events">Events</a></li>
+                            <li><a href="/pages/team">Team</a></li>
+                            <li><a href="/pages/team#open-positions">Open Positions</a></li> 
                             <li><a href="/pages/contact">Contact Us</a></li>                             
                         </ul>
                     </div>
@@ -24,8 +25,8 @@
                     <div class="footer-widget wow fadeIn" data-wow-duration="4s">
                         <h5 class="footer-title heading-5">Follow Us</h5>
                         <ul class="footer-socials list-inline">
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li class="list-inline-item"><a href="https://twitter.com/IIScACM_Chapter"><i class="fa fa-2x fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="https://www.linkedin.com/company/iisc-acm-student-chapter/"><i class="fa fa-2x fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
