--- a/_includes/header_bottom_area.html
+++ b/_includes/header_bottom_area.html
@@ -31,12 +31,12 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="headline-box m-0 wow fadeInUp" data-wow-duration="3s" style="visibility: visible; animation-duration: 3s; animation-name: fadeInUp;">
                         <div class="headline-logo">
-                            <a href="/pages/open-positions/"><img src="{{site.baseurl}}/assets/images/service-icon3.png" alt="Open Positions"></a>
+                            <a href="/pages/team#open-positions"><img src="{{site.baseurl}}/assets/images/service-icon3.png" alt="Open Positions"></a>
                         </div>
                         <div class="headline-content">
-                            <h4 class="heading-4"><a href="/pages/open-positions/">Open Positions</a></h4>
+                            <h4 class="heading-4"><a href="/pages/team#open-positions">Open Positions</a></h4>
                             <p><a href="/docs/left-sidebar-example">The Chapter is still in it's infancy and we need your help to ensure it's smooth operation. Apply now for the open positions. </a></p>
-                            <a href="/pages/open-positions/" class="btn btn-style3">More</a>
+                            <a href="/pages/team#open-positions" class="btn btn-style3">More</a>
                         </div>
                     </div>
                 </div>
