--- a/_includes/team_area.html
+++ b/_includes/team_area.html
@@ -1,19 +1,16 @@
 <div class="team-area bg-color1">
     <div class="team-wrapper section-spacing bminus-30">
         <div class="container">
-            <div class="section-title wow fadeInUp" data-wow-duration="2s">
-                <h2 class="heading-2"> Our Teams</h2>
-                <p>Vulputate odio ut enim blandit volutpat maecenas volutpat blandit </p>
-            </div>
             <div class="row">
                 <div class="col-md-12">
-                 <div class="team-carousel owl-carousel">
+                 <div class="team-carousel-1 owl-carousel">
                   {% for team_member in site.team_members %}
+                  {% if team_member.priority == 1 %}
                   <div class="single-team team-style">
-                    <div class="team-img"><img src="{{team_member.image_url}}" alt="{{team_member.name}}"></div>
+                    <div class="team-img"><a href="{{team_member.personal_url}}"><img style="width: 50%; height: 50%; margin: auto" src="{{team_member.image_url}}" alt="{{team_member.name}}"></a></div>
                     <div class="team-content">
                         <div class="team-title">
-                            <h4 class="heading-4"> <a href="{{team_member.url}}">{{team_member.name}}</a> </h4>
+                            <h4 class="heading-4"> <a href="{{team_member.personal_url}}">{{team_member.name}}</a> </h4>
                             <p>{{team_member.designation}}</p>
                         </div>
                         <ul class="team-socials list-inline">
@@ -35,9 +32,46 @@
                         </ul>
                     </div>
                    </div> 
+                   {% endif %}
                    {% endfor %}
                  </div>
               </div>
          </div>
+         <div class="row">
+            <div class="col-md-12">
+             <div class="team-carousel-2 owl-carousel">
+              {% for team_member in site.team_members %}
+              {% if team_member.priority == 2 %}
+              <div class="single-team team-style">
+                <div class="team-img"><a href="{{team_member.personal_url}}"><img style="width: 50%; height: 50%; margin: auto" src="{{team_member.image_url}}" alt="{{team_member.name}}"></a></div>
+                <div class="team-content">
+                    <div class="team-title">
+                        <h4 class="heading-4"> <a href="{{team_member.personal_url}}">{{team_member.name}}</a> </h4>
+                        <p>{{team_member.designation}}</p>
+                    </div>
+                    <ul class="team-socials list-inline">
+                        {% if team_member.behance_url %}
+                        <li class="list-inline-item"><a href="{{team_member.behance_url}}"><i class="fa fa-behance"></i></a></li>
+                        {% endif %}
+                        {% if team_member.twitter_url %}
+                        <li class="list-inline-item"><a href="{{team_member.twitter_url}}"><i class="fa fa-twitter"></i></a></li>
+                        {% endif %}
+                        {% if team_member.google_plus_url %}
+                        <li class="list-inline-item"><a href="{{team_member.google_plus_url}}"><i class="fa fa-google-plus"></i></a></li>
+                        {% endif %}
+                        {% if team_member.instagram_url %}
+                        <li class="list-inline-item"><a href="{{team_member.instagram_url}}"><i class="fa fa-instagram"></i></a></li>
+                        {% endif %}
+                        {% if team_member.linkedin_url %}
+                        <li class="list-inline-item"><a href="{{team_member.linkedin_url}}"><i class="fa fa-linkedin"></i></a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+               </div> 
+               {% endif %}
+               {% endfor %}
+             </div>
+          </div>
+     </div>
      </div>
 </div>
