--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2933,20 +2933,39 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
 *  25.0 Team  Area
 * ============================
 */
+
+.team-carousel-1 .owl-stage {
+  margin: auto;
+}
+
+.team-carousel-2 .owl-stage {
+  margin: auto;
+}
+
 .team-style {
   overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 30px;
 }
 
+.team-style .team-img .img {
+  width: 50%;
+  height: 50%;
+  margin: auto
+}
+
 .team-style .team-content {
-  transition: all 0.5s ease 0s;
   background-color: #f2f6fb;
-  position: relative;
   bottom: -40px;
+  margin-top: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+  text-align: center;
 }
 
 .team-style .team-content .team-title {
-  padding: 30px;
+  padding: 20px;
 }
 
 .team-style .team-content .team-title h4 {
