Add events, team, social

--- a/_includes/header_bottom_area.html
+++ b/_includes/header_bottom_area.html
@@ -35,7 +35,7 @@
                         </div>
                         <div class="headline-content">
                             <h4 class="heading-4"><a href="/pages/team#open-positions">Open Positions</a></h4>
-                            <p><a href="/docs/left-sidebar-example">The Chapter is still in it's infancy and we need your help to ensure it's smooth operation. Apply now for the open positions. </a></p>
+                            <p><a href="/pages/team#open-positions">The Chapter is still in it's infancy and we need your help to ensure it's smooth operation. Apply now for the open positions. </a></p>
                             <a href="/pages/team#open-positions" class="btn btn-style3">More</a>
                         </div>
                     </div>
