--- a/_includes/team_area.html
+++ b/_includes/team_area.html
@@ -75,3 +75,85 @@
      </div>
      </div>
 </div>
+
+<!-- <Designed by a human> -->
+<!-- http://shriramr.net -->
+        <!-- .. .............................................................................................................
+          ..............................................................................................................
+          . .. ..... ..................................................................................................,
+        ......................................... ...................................................................,,,
+      ................................................................................................................,,
+      .................................................................................................................,
+    . .................................................................................................................,
+    ....................................................................................................................
+     ...................................................................................................................
+        .......................................................,........................................................
+      .............................................,**(#########%%%%#/,.................................................
+      ........................................,*(((###(((#######%%%#####((,.............................................
+   . ....................................,//#########(###(##%#%%&%&&&&%&&%%#%(*.........................................
+  . ...................................,#(((/((#((###########%%%#%%#%%%%&&&&%%%%*.......................................
+   ..................................,((((((##(#######(#(##%%%%%%&&&&%&&&%%&&&%%%#,.....................................
+   ................................./((((####(##((#####%%%&&&&&&%&&&@%%&%&&&%&&&&%%#*...................................
+ .................................*(####(%#((%%%%%%%%#(/#%&&&&&%&%&%&&&%&&@@&&&%&%%#*.................................
+ ................................*(####&%##%##%%#(%%&&&&&%##%&%%&&&&@&@&&@&@@@@&&&&&&%%,................................
+  ..............................((##(#%%#(#%%#(######((#%%%&&&&@&&&@@&@@@@@@@@@@@&&&&%%%/...............................
+  .............................(######(/#%#####%#%#&&%###%&&&&&@@&@@@@@@@@@@@@@@@@&@&&&%(...............................
+ .............................*##(((##/#&/#&&&&%#%##%&&&&&&&&@%&&@@@@@@@@@@@@@@@@@@@&@@%%(..............................
+ ............................*((#(%#((#&%&&@%%&%##(%#(%%%&&&@@@@@@@@@@@@@&&&&&@@@@@@@@&&&%..............................
+ ............................(#(##%#(##%&@@@&&&@&&%%%##%%##%&&&&&@&&@%&%%%%(#(#%@@@@@@@&&&/.............................
+  ...........................(((#%(&&&@@@@@@@@&@@&&%#%%%%&&&&&&&%#%%####////(%&@@@@@@@&.............................
+  ..........................,((#%%#%%%@@@@@@@@@@@@&&&%#%%#%%%###%####(#(/////(((#%@@@@@@&&&,............................
+ ............................(##&%#%%&@@@@@@@@@@&&%#/(((****((((((//*,,,**/**///(#&@@@@@@&&*,...........................
+ ............................*##&&&&%@@@@&@&%&((/*/**((#####/,,,,,,,,,,,,,****//(##&@@@@@@&,,.,.........................
+ .......................... ..(#%@@&@&&&///********,,,,.....,,,..,,,,,,,,****/(((###@@@@@@&,,,,.........................
+ ..........................   (%%@@&%#(*******,,,,,..................,,,,,***///(((#&@@@@&&*,,,.........................
+ ..........................  .,#&&@********,,,,,....................,,,,***///(((#&@@@@&%,,,,.........................
+ ..........................   .(%%@#(*,****,,,,....,................,,,,,,,****/((((%@@@@%*,,,,.........................
+  .........................    .%%%#(,,**/((//**,***,,,*,,,,,,,,*,,,**,***//((##%((((&@@@/,,,,,.........................
+ ...........................  ..*%%#/,,(%%#####%%%&%%#((//******///(#&&&&&%%%&&&%((&@&(,,,,,,.........................
+  ..........................     ,(#*,**//((#%&&@@#((((//****//(###%&@@@&&&%%##%#((%&,,,,,,,,.........................
+   .........................     .##*,***/#%(. /&&%/,,/(//*,..,/(##(  .&&%/.*##(///(&,,,,,,,,,,.......................
+   .........................     .#(******/((//***////*,/*,,..,*/(*,,,*//(/(###(//*//(&*,,,,,,,,,.......................
+   ..........................     ##**,,,**////**,*,.,***,,....*/((/,,,*///(((//***//(&*,,,,,,,,,.......................
+   ............................   ,#**,,,,,,,******,,*,,,,,,...*////***************//(&,,,,,,,,.........................
+   .............................  .****,,,,,,,,,,,,,,,**,,,,...,*////*,,,,*,,,,,,**//(,,,,,,,,,.........................
+ ...............................   ****,,,,,........,****,,....,,/((/*,,,,..,,,,,*//((,,,,,,,...........................
+  ..............................   ,/****,,,,.......,***,,... ..,,///,,......,,,**/((#,,,,,,............................
+ ...............................    //****,,,,......,*,,,,......,,/**/,.....,,,,*//(#/,,,,,,............................
+ ................................  .*//****,,,,.....,*,,*/(**,*/&@#/((*,..,,,,**//(##,,,,,,,,,..........................
+ ................................    ///***,,,,,,..,,,,**,.,//(*,*/**,,,,,,,,***/(##/,,,,,,,,...........................
+ .................................   /////***,,,,,,,,,*//(//(*((#(##/**,,******/(##%,,,,,,,,,...........................
+ ................................     (/////*******/*//(/***(////((#(((//**/*/(###%*,,,,,,,,,...........................
+ ................................     .((((//*//((#((#/*,,***,,/**//((###%#(/(#%%#(,,,,,,,,,,...........................
+ ................................       ##(//*/(#####(((((//(/(((####(%%#(#((%%%%%,,,,,,,,,,,...........................
+ ................................       %%##(((/((/**//*,,,....,,*/((///((/(%%%%(,,,,,,,,,..............................
+ .................................../(#(@((%#%#((//*****,,,,**/////(*///((#&&&&&@&&%,,,,................................
+ ............................../((%(###(&**,#%###(///*//((##((#((/*(///((#&@&@((((&&%#..................................
+ .....................((##(#((((#%%####(%***,,(%#%#(#/////****/****/((###&&@%#((///#%%%%%#(/,...........................
+   .......,(((((((((((((#%#(###%#####%#(%*,*,,,,#%%#((//(/(/(***/(//(/#%&@%(((///**%%%%%%%%%%%%%%#/,,,,,,,,,,,,,,,,,,,,,
+   ...*/(((((((#((#####%(#%##(#%###(#%##&*,**,,,,,#%#(((#(((///(((####%&@(((((///*(%%%%%%%%%%%%%%%%%%%%%%*,,,,,,,,,,,,,,
+ */(((((((####(#%((####%#(#%##(########(***,,,,,,,/###(#(##(##%%#%(((//(//**#%%%%%%%%%%%%%%%%%%%%%%%%%%%/,,,,,,,,,
+ #/(#(((##(###((#%##%######%%#((#####&%##&/**,,,.,,,,,*(#%&%%&&&%&(////////(***(&%%%%%%%%%%%%%%%%%%%%%%%%%%#####%(,,,,
+ ##(##((###(###((#%#%%####(#&%#((####&%%##&/*,,,,,.,,,********************///(/**%&%%&&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%,
+ (&(#%#(((%#####(#&%#%%%####%%%#(((#%&%####%/,,,,,,,,,,,,,,,,,,,,,,,,*******///*%@%%&&&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+ (#%(#%#((#%#(####%#%%%####%%%#((#%&####%*,.,,,,,...,,,,,,,,,,,,,********/(%%&%%%&&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+ ((@#(%%#((%%((###%@###&%%###%%###((#&##%##%/,...,,.............,,,***,,,,,/%%&&&%%&&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+ (#%&(%&%#(#%%(((##&%##%%%###%%%##((#&%%####%(,.................,,,,,,,,,,%%&&&&%%&&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+ ((#@##%#(%%#((##&##%###%%###(#&&%%###&%#%%/,...............,,,,,.,,(%%&&%&%%%&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+ ((#%%#%&%###%%#((#%&%###&%####%%##(#&##%#%%#%%/*,,,......,,,..,,,,,#%%&&&&&%%%%&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%&
+ %(#%&(#%%###%%#(((#@%####&%####%##((%#####%#%##%%#(**,,,.,*,.,*/%%%&&&&%&&%%%%%&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%&
+ %((%#@(%&%##%###((#&##(%&%###%%#((#&%######%&%#%%%#####%%%%%%##%%%&%%%%%%&&%%%%%&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+ (((%##%%&%###%##((#&&%#((#%#####((#%%#######%&&%%%%%%%%%%%%%%%%%%%%%%%%%&&%%%%%%&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%#%%%%%&
+ #%(#%#%&%######((&%###((#%%######(#%%%#######%&&%%#%%%%%%%%%%%%%%%%%&%%&%%%%%%%%&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+ ###%%####&%######((%%####(##%%#####(#%%%########%&&%%#####%%%%%%%%%%&%%%&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+ %#(%###%#####((%####(##%%###((##%%#########%&%%%%%##%%%%%%%%%%%%&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%&%
+ #%(#&&%##%&%######(#######(#%####(##%%##########%%%%%%%%%%%%%%%%%%%&&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%&%%%%%%&%%%%%%%%
+ (#%&##&%#################%%##(##%############%%%%%%%%%%%%%%%%%@%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%&%%%%%%&%
+ #%##%%&%##%#######&%#########%%##(##%#############%%%%%%%%%%%%%%%&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%&&%%%%%&%%
+ %%##%%@%%##%%#######%%#########(###(#################%%%%%%%%%%%%&&%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%&&&&%%%&&&%%%%&&%&
+ %####%&&#%%%####(##%#############((################%%%%%%###%%&&%%%%%%%%%%%%%%&&%%%%%%%%%%%%%%%%&&&&&&&%%&&&%&%%%&&&&
+ &###&@##%%################(#####################%%%%%%#%%&&%%%%%%%%%%%%%%%&%%%%%%%%%%%&%&%%%&&&&&&&&&@&&&&&&&&&&%
+ #####@@%###%######(%%#############################%#####%%%%&&%%%%%%%%%%%%%%%&&&%%%%%%%%%%%&&&&&&&&&&&&&@&&&&&&&&&&&&
+ %%%%###&@##%%#######%##########################%##%%####%%%&&%%%%%%%%%%%%%%%%&%%&&&%&&%&&%&&&&&&&&&&&&&@@&&&&&&&&&&&&
+ %%%%###&@&%###%#######%#########################%%%#%####%%%%&&%%%%%%%%%%%&%%%&&&&%&&&&&&&&&&&&&&&@&&&&&@@@@&&@&&&&&&&% -->
+<!-- http://shriramr.net -->
