--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,7 @@
     <div class="footer-wrapper">
         <div class="container">
             <div class="footer-copyright text-center">
-                <p> &copy; Copyright {{ site.time | date: '%Y' }} {{site.title}} - Designed by <a href="https://themeix.com">Themeix</a></p>
+                <p> &copy; Copyright {{ site.time | date: '%Y' }} {{site.title}} - Designed by <a href="http://shriramr.net">a human</a></p>
             </div>
         </div>
     </div>
