Update team order

--- a/_includes/header_bottom_area.html
+++ b/_includes/header_bottom_area.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="headline-content">
                             <h4 class="heading-4"><a href="/invitedtalk-manishgupta">Invited Talk</a></h4>
-                            <p><a href="/invitedtalk-manishgupta"> The Chapter will host an invited talk by <b>Dr. Manish Gupta</b>, Head, Google Research India on <b>23rd October 2019</b>. </a></p>
+                            <p><a href="/invitedtalk-manishgupta"> The Chapter will host an invited talk by <b>Dr. Manish Gupta</b>, Director, Google Research India on <b>23rd October 2019</b>. </a></p>
                             <a href="/invitedtalk-manishgupta" class="btn btn-style3">More</a>
                         </div>
                     </div>
