Update team, footer, timeline

--- a/_includes/timeline_area.html
+++ b/_includes/timeline_area.html
@@ -10,15 +10,15 @@
                 <ul>                        
                         <li class="upcoming-event">
                             <div class="timeline-content upcoming-event">
-                                <h4 class="heading-4">Invited Talk - Dr. Manish Gupta</h4>
-                                <p class="timeline-time">23-10-2019</p>
+                                <h4 class="heading-4"><a href="/invitedtalk-manishgupta">Invited Talk - Dr. Manish Gupta</a></h4>
+                                <p class="timeline-time"><a href="/invitedtalk-manishgupta">23-10-2019</a></p>
                                 <!-- <p class="timeline-desc">Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus </p> -->
                             </div>
                         </li>
                         <li class="completed-event">
                             <div class="timeline-content completed-event">
-                                <h4 class="heading-4">Inaugural Event</h4>
-                                <p class="timeline-time">13-06-2019</p>
+                                <h4 class="heading-4"><a href="/inaugural-event">Inaugural Event</a></h4>
+                                <p class="timeline-time"><a href="/inaugural-event">13-06-2019</a></p>
                             </div>
                         </li>
                         <li class="completed-event">
