--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,8 +25,8 @@
                     <div class="footer-widget wow fadeIn" data-wow-duration="4s">
                         <h5 class="footer-title heading-5">Follow Us</h5>
                         <ul class="footer-socials list-inline">
-                            <li class="list-inline-item"><a href="https://twitter.com/IIScACM_Chapter"><i class="fa fa-2x fa-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="https://www.linkedin.com/company/iisc-acm-student-chapter/"><i class="fa fa-2x fa-linkedin"></i></a></li>
+                            <li class="list-inline-item"><a target="_blank" href="https://twitter.com/IIScACM_Chapter"><i class="fa fa-2x fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/company/iisc-acm-student-chapter/"><i class="fa fa-2x fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -36,7 +36,7 @@
     <div class="footer-wrapper">
         <div class="container">
             <div class="footer-copyright text-center">
-                <p> &copy; Copyright {{ site.time | date: '%Y' }} {{site.title}} - Designed by <a href="http://shriramr.net">a human</a></p>
+                <p> &copy; Copyright {{ site.time | date: '%Y' }} {{site.title}} - Theme from <a target="_blank" href="https://themeix.com/">Themix</a> - Maintained by <a target="_blank" href="http://shriramr.net">a human</a></p>
             </div>
         </div>
     </div>
