--- a/_includes/team_area.html
+++ b/_includes/team_area.html
@@ -7,18 +7,18 @@
                   {% for team_member in site.team_members %}
                   {% if team_member.priority == 1 %}
                   <div class="single-team team-style">
-                    <div class="team-img"><a href="{{team_member.personal_url}}"><img style="width: 50%; height: 50%; margin: auto" src="{{team_member.image_url}}" alt="{{team_member.name}}"></a></div>
+                    <div class="team-img"><a target="_blank" href="{{team_member.personal_url}}"><img style="width: 50%; height: 50%; margin: auto" src="{{team_member.image_url}}" alt="{{team_member.name}}"></a></div>
                     <div class="team-content">
                         <div class="team-title">
-                            <h4 class="heading-4"> <a href="{{team_member.personal_url}}">{{team_member.name}}</a> </h4>
+                            <h4 class="heading-4"> <a target="_blank" href="{{team_member.personal_url}}">{{team_member.name}}</a> </h4>
                             <p>{{team_member.designation}}</p>
                         </div>
                         <ul class="team-socials list-inline">
                             {% if team_member.twitter_url %}
-                            <li class="list-inline-item"><a href="{{team_member.twitter_url}}"><i class="fa fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a target="_blank" href="{{team_member.twitter_url}}"><i class="fa fa-twitter"></i></a></li>
                             {% endif %}
                             {% if team_member.linkedin_url %}
-                            <li class="list-inline-item"><a href="{{team_member.linkedin_url}}"><i class="fa fa-linkedin"></i></a></li>
+                            <li class="list-inline-item"><a target="_blank" href="{{team_member.linkedin_url}}"><i class="fa fa-linkedin"></i></a></li>
                             {% endif %}
                         </ul>
                     </div>
@@ -34,18 +34,18 @@
               {% for team_member in site.team_members %}
               {% if team_member.priority == 2 %}
               <div class="single-team team-style">
-                <div class="team-img"><a href="{{team_member.personal_url}}"><img style="width: 50%; height: 50%; margin: auto" src="{{team_member.image_url}}" alt="{{team_member.name}}"></a></div>
+                <div class="team-img"><a target="_blank" href="{{team_member.personal_url}}"><img style="width: 50%; height: 50%; margin: auto" src="{{team_member.image_url}}" alt="{{team_member.name}}"></a></div>
                 <div class="team-content">
                     <div class="team-title">
-                        <h4 class="heading-4"> <a href="{{team_member.personal_url}}">{{team_member.name}}</a> </h4>
+                        <h4 class="heading-4"> <a target="_blank" href="{{team_member.personal_url}}">{{team_member.name}}</a> </h4>
                         <p>{{team_member.designation}}</p>
                     </div>
                     <ul class="team-socials list-inline">
                         {% if team_member.twitter_url %}
-                        <li class="list-inline-item"><a href="{{team_member.twitter_url}}"><i class="fa fa-twitter"></i></a></li>
+                        <li class="list-inline-item"><a target="_blank" href="{{team_member.twitter_url}}"><i class="fa fa-twitter"></i></a></li>
                         {% endif %}
                         {% if team_member.linkedin_url %}
-                        <li class="list-inline-item"><a href="{{team_member.linkedin_url}}"><i class="fa fa-linkedin"></i></a></li>
+                        <li class="list-inline-item"><a target="_blank" href="{{team_member.linkedin_url}}"><i class="fa fa-linkedin"></i></a></li>
                         {% endif %}
                     </ul>
                 </div>
