--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2965,7 +2965,10 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
 }
 
 .team-style .team-content .team-title {
-  padding: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .team-style .team-content .team-title h4 {
