Add student interaction with Jay Yagnik

--- a/_includes/timeline_area.html
+++ b/_includes/timeline_area.html
@@ -10,9 +10,14 @@
                 <ul>                        
                         <li class="upcoming-event">
                             <div class="timeline-content upcoming-event">
+                                <h4 class="heading-4"><a href="/studinter-jayyagnik">Student Interaction with Jay Yagnik</a></h4>
+                                <p class="timeline-time"><a href="/studinter-jayyagnik">04-12-2019</a></p>
+                            </div>
+                        </li>
+                        <li class="completed-event">
+                            <div class="timeline-content completed-event">
                                 <h4 class="heading-4"><a href="/invitedtalk-manishgupta">Invited Talk - Dr. Manish Gupta</a></h4>
                                 <p class="timeline-time"><a href="/invitedtalk-manishgupta">23-10-2019</a></p>
-                                <!-- <p class="timeline-desc">Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus </p> -->
                             </div>
                         </li>
                         <li class="completed-event">
