--- a/_includes/header_bottom_area.html
+++ b/_includes/header_bottom_area.html
@@ -19,12 +19,12 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="headline-box wow fadeInUp" data-wow-duration="2s" style="visibility: visible; animation-duration: 2s; animation-name: fadeInUp;">
                         <div class="headline-logo">
-                            <a href="/invitedtalk-manishgupta"><img src="{{site.baseurl}}/assets/images/popular-2.png" alt="Invited Talk"></a>
+                            <a href="/studinter-jayyagnik"><img src="{{site.baseurl}}/assets/images/popular-2.png" alt="Student Interaction"></a>
                         </div>
                         <div class="headline-content">
-                            <h4 class="heading-4"><a href="/invitedtalk-manishgupta">Invited Talk</a></h4>
-                            <p><a href="/invitedtalk-manishgupta"> The Chapter will host an invited talk by <b>Dr. Manish Gupta</b>, Director, Google Research India on <b>23rd October 2019</b>. </a></p>
-                            <a href="/invitedtalk-manishgupta" class="btn btn-style3">More</a>
+                            <h4 class="heading-4"><a href="/studinter-jayyagnik">Student Interaction</a></h4>
+                            <p><a href="/studinter-jayyagnik"> The Chapter is delighted to host an open ended discussion between <b>Jay Yagnik</b>, VP and Engineering Fellow @ Google and students on <b>05th December 2019</b> between <b>10:30 AM - 11:30 AM</b>. </a></p>
+                            <a href="/studinter-jayyagnik" class="btn btn-style3">More</a>
                         </div>
                     </div>
                 </div>
