Changed the student interaction page to CC bootcamp event

--- a/_includes/header_bottom_area.html
+++ b/_includes/header_bottom_area.html
@@ -22,9 +22,9 @@
                             <a href="/studinter-jayyagnik"><img src="{{site.baseurl}}/assets/images/popular-2.png" alt="Student Interaction"></a>
                         </div>
                         <div class="headline-content">
-                            <h4 class="heading-4"><a href="/studinter-jayyagnik">Student Interaction</a></h4>
-                            <p><a href="/studinter-jayyagnik"> The Chapter is delighted to host an open ended discussion between <b>Jay Yagnik</b>, VP and Engineering Fellow @ Google and students on <b>04th December 2019</b> between <b>10:30 AM - 11:30 AM</b>. </a></p>
-                            <a href="/studinter-jayyagnik" class="btn btn-style3">More</a>
+                            <h4 class="heading-4"><a>Competitive Coding bootcamp - TBA</a></h4>
+                            <p><a> The Chapter is planning to host a Competitive coding bootcamp to bolster the coding spirit in the computing community . </a></p>
+                            <a class="btn btn-style3">More</a>
                         </div>
                     </div>
                 </div>
