--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="navigation-box">
                 <div class="navigation-left">
-                    <a class="header-logo" href="{{site.url}}"><img src="{{site.baseurl}}/assets/images/header-logo-4.png" alt="header logo"></a>
+                    <a class="header-logo" href="https://india.acm.org/"><img src="{{site.baseurl}}/assets/images/header-logo-4.png" alt="header logo"></a>
                 </div>
                
 					
