Added content for new event

--- a/_includes/header_bottom_area.html
+++ b/_includes/header_bottom_area.html
@@ -22,9 +22,9 @@
                             <a href="/studinter-jayyagnik"><img src="{{site.baseurl}}/assets/images/popular-2.png" alt="Student Interaction"></a>
                         </div>
                         <div class="headline-content">
-                            <h4 class="heading-4"><a>Competitive Coding bootcamp - TBA</a></h4>
+                            <h4 class="heading-4"><a>Competitive Coding bootcamp with Arjun Arul </a></h4>
                             <p><a> The Chapter is planning to host a Competitive coding bootcamp to bolster the coding spirit in the computing community. </a></p>
-                            <a class="btn btn-style3">More</a>
+                            <a href="/coding-bootcamp" class="btn btn-style3">More</a>
                         </div>
                     </div>
                 </div>
