--- a/_includes/timeline_area.html
+++ b/_includes/timeline_area.html
@@ -10,8 +10,8 @@
                 <ul>                        
                         <li class="upcoming-event">
                             <div class="timeline-content upcoming-event">
-                                <h4 class="heading-4"><a>Competitive coding boot camp</a></h4>
-                                <p class="timeline-time"><a>TBA</a></p>
+                                <h4 class="heading-4"><a href="/coding-bootcamp">Competitive coding bootcamp with Arjun Arul</a></h4>
+                                <p class="timeline-time"><a href="/coding-bootcamp">17-09-2022</a></p>
                             </div>
                         </li>
 
