Updated events to the website

--- a/_includes/header_bottom_area.html
+++ b/_includes/header_bottom_area.html
@@ -22,9 +22,9 @@
                             <a href="/studinter-jayyagnik"><img src="{{site.baseurl}}/assets/images/popular-2.png" alt="Student Interaction"></a>
                         </div>
                         <div class="headline-content">
-                            <h4 class="heading-4"><a>Competitive Coding bootcamp with Arjun Arul </a></h4>
-                            <p><a> The Chapter is planning to host a Competitive coding bootcamp to bolster the coding spirit in the computing community. </a></p>
-                            <a href="/coding-bootcamp" class="btn btn-style3">More</a>
+                            <h4 class="heading-4"><a href="/balakrishnan-srinivasan">Invited talk by Dr. Balakrishnan Srinivasan @ CSA Seminar Hall 254 (First floor), NVIDIA, Bangalore </a></h4>
+                            <p><a> Title : Doing your life's work </a></p>
+                            <a class="btn btn-style3" href="/balakrishnan-srinivasan">More</a>
                         </div>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                         </div>
                         <div class="headline-content">
                             <h4 class="heading-4"><a href="/pages/team#open-positions">Open Positions</a></h4>
-                            <p><a href="/pages/team#open-positions">The Chapter is still in it's infancy and we need your help to ensure it's smooth operation. Apply now for the open positions. </a></p>
+                            <p><a href="/pages/team#open-positions">The Chapter is active and is looking for your participation to ensure it's smooth operation. Apply now for the open positions. </a></p>
                             <a href="/pages/team#open-positions" class="btn btn-style3">More</a>
                         </div>
                     </div>
