--- a/_includes/timeline_area.html
+++ b/_includes/timeline_area.html
@@ -7,9 +7,21 @@
             </div>
 
             <div class="timeline">
-                <ul>                        
-                        <li class="upcoming-event">
-                            <div class="timeline-content upcoming-event">
+                <ul>
+                        <li class="completed-event">
+                            <div class="timeline-content completed-event">
+                                <h4 class="heading-4"><a href="/balakrishnan-srinivasan">Invited talk by Dr. Balakrishnan, Srinivasan, Nvidia</a></h4>
+                                <p class="timeline-time"><a href="/balakrishnan-srinivasan">24-11-2022</a></p>
+                            </div>
+                        </li>                    
+                        <li class="completed-event">
+                            <div class="timeline-content completed-event">
+                                <h4 class="heading-4"><a href="/monojit-choudhury">Invited talk by Dr. Monojit Choudhury @ CDS 102 (First floor), Turing Lab, MSR, India</a></h4>
+                                <p class="timeline-time"><a href="/monojit-choudhury">18-11-2022</a></p>
+                            </div>
+                        </li>                    
+                        <li class="completed-event">
+                            <div class="timeline-content completed-event">
                                 <h4 class="heading-4"><a href="/coding-bootcamp">Competitive coding bootcamp with Arjun Arul</a></h4>
                                 <p class="timeline-time"><a href="/coding-bootcamp">17-09-2022</a></p>
                             </div>
@@ -17,15 +29,15 @@
 
                         <li class="completed-event">
                             <div class="timeline-content completed-event">
-                                <h4 class="heading-4"><a>Mixer for incoming students </a></h4>
-                                <p class="timeline-time"><a >18-08-2022</a></p>
+                                <h4 class="heading-4"><a href="/mixer-event">Mixer for incoming students </a></h4>
+                                <p class="timeline-time"><a href="/mixer-event">18-08-2022</a></p>
                             </div>
                         </li>
 
                         <li class="completed-event">
                             <div class="timeline-content completed-event">
-                                <h4 class="heading-4"><a >Invited Talk - Prof. R. Ramanujam</a></h4>
-                                <p class="timeline-time"><a>17-06-2022</a></p>
+                                <h4 class="heading-4"><a href="/ramanujam"> ACM India Eminent Speaker program - Invited Talk - Prof. R. Ramanujam</a></h4>
+                                <p class="timeline-time"><a href="/ramanujam">17-06-2022</a></p>
                             </div>
                         </li>
 
